Terminamos los controles

--- a/src/layouts/FormLayout.astro
+++ b/src/layouts/FormLayout.astro
@@ -13,5 +13,11 @@
     <slot name="caja-texto-apellido" />
     <br>
     <slot name="caja-texto-email" />
+    <br />
+    <slot name="grupo-radio" />
+    <br/>
+    <slot name="select-ciudades" />
+    <br/>
+    <slot name="boton-envio"/>
 </body>
 </html>
