--- a/src/components/ImputText.astro
+++ b/src/components/ImputText.astro
@@ -25,4 +25,32 @@ controles:
 ES ETIQUETA CERRADA
 --->
 <label>{ etiqueta }:</label>
-<input />
+<input type="text"/>
+<style>
+      /*solo se puede poner aqui*/
+      /*sintaxis css*/
+      /*estilos para el input text*/
+      /*selector de etiqueta*/
+      /*estilos aplicables a toda etiqueta*/
+      /* señalada por el selector*/
+      input[type="text"]{
+        background-color: rgb(128, 165, 204);
+        width: 400px;
+        height: 20px;
+        color: rgb(76, 72, 187);
+        /* bordes:
+        -color
+        -peso
+        estilo (tipo de linea)
+        */
+        border-color: rgb(71, 71, 213);
+        border-width: 3px;
+        border-style: solid;
+        border-radius: 8px;
+    
+      }
+      
+        
+    
+</style>      
+ 
