--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ButtonSend from "../components/ButtonSend.astro";
 import InputText 
 from "../components/ImputText.astro";
 import RadioButtonGroup from "../components/RadioButtonGroup.astro";
